# perfect-noise

./: CONTRIBUTING.md  DISCLAIMER.md  Justfile  Makefile  README.md  requirements-dev.txt  setup.py
.github/workflows/: python-app.yaml  test-pad.yaml
design/: 001_create_cli.org
docs/: concepts.md  specification.md
pad/: Makefile  README.md  pyproject.toml
pad/design/: pad-cli.org
pad/src/perfect_pad/: cli.py  pad.py  settings.py
pad/src/perfect_pad/hazmat/: hazmat.py
pad/tests/: test_cli.py  test_hazmat.py  test_pad.py
perfect-noise/: archive.py  decrypt.py  encrypt.py  pad.py  settings.py
perfect-noise/utils/: file_helpers.py
perfect_noise/: archive.py  decrypt.py  encrypt.py  exceptions.py  pad.py
perfect_noise/hazmat/: hazmat.py
tests/: test_archive.py  test_decrypt.py  test_encrypt.py  test_hazmat.py  test_pad.py  test_utils.py
