[project]
name = "perfect_pad"
version = "0.0.1"
description = "CLI for managing secure one-time pads"
readme = "README.md"
authors = [{ name="Jim Ladd" }]
requires-python = ">=3.13"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]
keywords = ["one-time pad", "OTP", "cryptography", "encryption", "random", "pad", "perfect"]
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/jladdjr/perfect-noise"
Repository = "https://github.com/jladdjr/perfect-noise"
Issues = "https://github.com/jladdjr/perfect-noise/issues"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "perfect-pad",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
perfect-pad = { workspace = true }
